--- a/imageslider.html
+++ b/imageslider.html
@@ -44,27 +44,27 @@ body {
 
 
 .slide:first-child {
-  background: url("장소 인증_01_v2.png") no-repeat
+  background: url("1.png") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(2) {
-  background: url("장소 인증_02_v2.png") no-repeat
+  background: url("2.png") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(3) {
-  background: url("장소 인증_03_v2.png") no-repeat
+  background: url("3.png") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(4) {
-  background: url("장소 인증_04_v2.png") no-repeat
+  background: url("4.png") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(5) {
-  background: url("장소 인증_05_v2.png") no-repeat
+  background: url("5.png") no-repeat
     center top/cover;
 }
 
