--- a/imageslider.html
+++ b/imageslider.html
@@ -53,17 +53,17 @@ body {
     center top/cover;
 }
 
-.slide:nth-child(4) {
+.slide:nth-child(3) {
   background: url("3.png") no-repeat
     center top/cover;
 }
 
-.slide:nth-child(5) {
+.slide:nth-child(4) {
   background: url("4.png") no-repeat
     center top/cover;
 }
 
-.slide:nth-child(6) {
+.slide:nth-child(5) {
   background: url("5.png") no-repeat
     center top/cover;
 }
@@ -119,6 +119,9 @@ body {
   <!-- partial:index.partial.html -->
   <div class="slider">
     <div class="slide current"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
     <div class="slide"></div>
     <div class="slide"></div>
 
