--- a/imageslider.html
+++ b/imageslider.html
@@ -122,6 +122,7 @@ body {
     <div class="slide"></div>
     <div class="slide"></div>
     <div class="slide"></div>
+    <div class="slide"></div>
   </div>
   <div class="buttons">
     <button id="prev"><i class="fas fa-arrow-left"></i></button>
